Name:                hoe
Version:             0.4
Synopsis:            Haskell One-liner Evaluator

Description:
  @hoe@ is a Haskell one-liner evaluator.
  It can evaluate a script in various ways depending on it's type.

License:             BSD3
License-file:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          tanaka.hideyuki@gmail.com
Copyright:           (c) 2010-2015, Hideyuki Tanaka
Homepage:            http://github.com/tanakh/hoe
Category:            Compilers/Interpreters
Build-type:          Simple
Cabal-version:       >=1.8

Source-repository head
  Type:     git
  Location: git://github.com/tanakh/hoe.git

Executable hoe
  Main-is:             HOE.hs

  Build-depends:       base       >= 4.7
                     , cmdargs
                     , exceptions
                     , hint       >= 0.4.2
                     , mtl        == 2.*
                     , split
                     , template-haskell

  Hs-source-dirs:      src
  Ghc-options:         -Wall
