name:                hoe
version:             1.1.0
synopsis:            hoe: Haskell One-liner Evaluator
description:         Please see README.md
homepage:            http://github.com/tanakh/hoe
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) 2010-2015, Hideyuki Tanaka
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10

executable hoe
  hs-source-dirs:      src
  main-is:             HOE.hs
  other-modules:       Evaluator
  ghc-options:         -Wall
  build-depends:       base        >= 4.7 && < 5
                     , exceptions
                     , hint        >= 0.4.2
                     , mtl
                     , optparse-declarative >= 0.3
                     , regex-posix
                     , split
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/tanakh/hoe.git
